apps/cli/src/tui/widgets/snapshots/conflictalert__new.snap
---
source: apps/cli/src/tui/widgets/tests.rs
expression: "snapshot(story, full_ascii)"
---
=== text (unicode) ===
┏━ › ⚡ Conflict predicted ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃ [NEW] claude-1 ↔ claude-2                                ┃
┃ just now                                                 ┃
┃  • src/parser.rs                                         ┃
┃  • src/lexer.rs                                          ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
=== styles (truecolor, unicode) ===
0:0-5 fg=#ffe066
0:7-7 fg=#ffe066
0:8-25 fg=#ffe066 BOLD
0:26-59 fg=#ffe066
1:0-0 fg=#ffe066
1:2-2 fg=#d29922
1:3-5 fg=#d29922 BOLD
1:6-6 fg=#d29922
1:8-15 fg=#e69f00 BOLD
1:17-17 fg=#8a8a8a
1:19-26 fg=#56b4e9 BOLD
1:59-59 fg=#ffe066
2:0-0 fg=#ffe066
2:2-9 fg=#8a8a8a
2:59-59 fg=#ffe066
3:0-0 fg=#ffe066
3:3-3 fg=#8a8a8a
3:5-17 fg=#f0883e
3:59-59 fg=#ffe066
4:0-0 fg=#ffe066
4:3-3 fg=#8a8a8a
4:5-16 fg=#f0883e
4:59-59 fg=#ffe066
5:0-59 fg=#ffe066
=== styles (256, unicode) ===
0:0-5 fg=@221
0:7-7 fg=@221
0:8-25 fg=@221 BOLD
0:26-59 fg=@221
1:0-0 fg=@221
1:2-2 fg=@172
1:3-5 fg=@172 BOLD
1:6-6 fg=@172
1:8-15 fg=@178 BOLD
1:17-17 fg=@245
1:19-26 fg=@74 BOLD
1:59-59 fg=@221
2:0-0 fg=@221
2:2-9 fg=@245
2:59-59 fg=@221
3:0-0 fg=@221
3:3-3 fg=@245
3:5-17 fg=@208
3:59-59 fg=@221
4:0-0 fg=@221
4:3-3 fg=@245
4:5-16 fg=@208
4:59-59 fg=@221
5:0-59 fg=@221
=== styles (16, unicode) ===
0:0-5 fg=LightYellow
0:7-7 fg=LightYellow
0:8-25 fg=LightYellow BOLD
0:26-59 fg=LightYellow
1:0-0 fg=LightYellow
1:2-2 fg=Yellow
1:3-5 fg=Yellow BOLD
1:6-6 fg=Yellow
1:8-15 fg=Yellow BOLD
1:17-17 fg=DarkGray
1:19-26 fg=Cyan BOLD
1:59-59 fg=LightYellow
2:0-0 fg=LightYellow
2:2-9 fg=DarkGray
2:59-59 fg=LightYellow
3:0-0 fg=LightYellow
3:3-3 fg=DarkGray
3:5-17 fg=Yellow
3:59-59 fg=LightYellow
4:0-0 fg=LightYellow
4:3-3 fg=DarkGray
4:5-16 fg=Yellow
4:59-59 fg=LightYellow
5:0-59 fg=LightYellow
=== styles (no-color, unicode) ===
0:0-5 BOLD | REVERSED
0:7-59 BOLD | REVERSED
1:0-0 BOLD | REVERSED
1:2-6 BOLD
1:8-15 BOLD
1:17-17 DIM
1:19-26 BOLD
1:59-59 BOLD | REVERSED
2:0-0 BOLD | REVERSED
2:2-9 DIM
2:59-59 BOLD | REVERSED
3:0-0 BOLD | REVERSED
3:3-3 DIM
3:5-17 BOLD
3:59-59 BOLD | REVERSED
4:0-0 BOLD | REVERSED
4:3-3 DIM
4:5-16 BOLD
4:59-59 BOLD | REVERSED
5:0-59 BOLD | REVERSED
=== styles (high-contrast, unicode) ===
0:0-5 fg=#ffe066 bg=#000000
0:7-7 fg=#ffe066 bg=#000000
0:8-25 fg=#ffe066 bg=#000000 BOLD
0:26-59 fg=#ffe066 bg=#000000
1:0-0 fg=#ffe066 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-2 fg=#ffe066 bg=#000000
1:3-5 fg=#ffe066 bg=#000000 BOLD
1:6-6 fg=#ffe066 bg=#000000
1:7-7 fg=#ffffff bg=#000000
1:8-15 fg=#e69f00 bg=#000000 BOLD
1:16-16 fg=#ffffff bg=#000000
1:17-17 fg=#c6c6c6 bg=#000000
1:18-18 fg=#ffffff bg=#000000
1:19-26 fg=#56b4e9 bg=#000000 BOLD
1:27-58 fg=#ffffff bg=#000000
1:59-59 fg=#ffe066 bg=#000000
2:0-0 fg=#ffe066 bg=#000000
2:1-1 fg=#ffffff bg=#000000
2:2-9 fg=#c6c6c6 bg=#000000
2:10-58 fg=#ffffff bg=#000000
2:59-59 fg=#ffe066 bg=#000000
3:0-0 fg=#ffe066 bg=#000000
3:1-2 fg=#ffffff bg=#000000
3:3-3 fg=#c6c6c6 bg=#000000
3:4-4 fg=#ffffff bg=#000000
3:5-17 fg=#ffb77c bg=#000000
3:18-58 fg=#ffffff bg=#000000
3:59-59 fg=#ffe066 bg=#000000
4:0-0 fg=#ffe066 bg=#000000
4:1-2 fg=#ffffff bg=#000000
4:3-3 fg=#c6c6c6 bg=#000000
4:4-4 fg=#ffffff bg=#000000
4:5-16 fg=#ffb77c bg=#000000
4:17-58 fg=#ffffff bg=#000000
4:59-59 fg=#ffe066 bg=#000000
5:0-59 fg=#ffe066 bg=#000000
=== text (ascii) ===
#= > [c] Conflict predicted ===============================#
# [NEW] claude-1 <-> claude-2                              #
# just now                                                 #
#  - src/parser.rs                                         #
#  - src/lexer.rs                                          #
#==========================================================#
=== styles (truecolor, ascii) ===
0:0-8 fg=#ffe066
0:9-26 fg=#ffe066 BOLD
0:27-59 fg=#ffe066
1:0-0 fg=#ffe066
1:2-2 fg=#d29922
1:3-5 fg=#d29922 BOLD
1:6-6 fg=#d29922
1:8-15 fg=#e69f00 BOLD
1:17-19 fg=#8a8a8a
1:21-28 fg=#56b4e9 BOLD
1:59-59 fg=#ffe066
2:0-0 fg=#ffe066
2:2-9 fg=#8a8a8a
2:59-59 fg=#ffe066
3:0-0 fg=#ffe066
3:3-3 fg=#8a8a8a
3:5-17 fg=#f0883e
3:59-59 fg=#ffe066
4:0-0 fg=#ffe066
4:3-3 fg=#8a8a8a
4:5-16 fg=#f0883e
4:59-59 fg=#ffe066
5:0-59 fg=#ffe066
=== styles (256, ascii) ===
0:0-8 fg=@221
0:9-26 fg=@221 BOLD
0:27-59 fg=@221
1:0-0 fg=@221
1:2-2 fg=@172
1:3-5 fg=@172 BOLD
1:6-6 fg=@172
1:8-15 fg=@178 BOLD
1:17-19 fg=@245
1:21-28 fg=@74 BOLD
1:59-59 fg=@221
2:0-0 fg=@221
2:2-9 fg=@245
2:59-59 fg=@221
3:0-0 fg=@221
3:3-3 fg=@245
3:5-17 fg=@208
3:59-59 fg=@221
4:0-0 fg=@221
4:3-3 fg=@245
4:5-16 fg=@208
4:59-59 fg=@221
5:0-59 fg=@221
=== styles (16, ascii) ===
0:0-8 fg=LightYellow
0:9-26 fg=LightYellow BOLD
0:27-59 fg=LightYellow
1:0-0 fg=LightYellow
1:2-2 fg=Yellow
1:3-5 fg=Yellow BOLD
1:6-6 fg=Yellow
1:8-15 fg=Yellow BOLD
1:17-19 fg=DarkGray
1:21-28 fg=Cyan BOLD
1:59-59 fg=LightYellow
2:0-0 fg=LightYellow
2:2-9 fg=DarkGray
2:59-59 fg=LightYellow
3:0-0 fg=LightYellow
3:3-3 fg=DarkGray
3:5-17 fg=Yellow
3:59-59 fg=LightYellow
4:0-0 fg=LightYellow
4:3-3 fg=DarkGray
4:5-16 fg=Yellow
4:59-59 fg=LightYellow
5:0-59 fg=LightYellow
=== styles (no-color, ascii) ===
0:0-59 BOLD | REVERSED
1:0-0 BOLD | REVERSED
1:2-6 BOLD
1:8-15 BOLD
1:17-19 DIM
1:21-28 BOLD
1:59-59 BOLD | REVERSED
2:0-0 BOLD | REVERSED
2:2-9 DIM
2:59-59 BOLD | REVERSED
3:0-0 BOLD | REVERSED
3:3-3 DIM
3:5-17 BOLD
3:59-59 BOLD | REVERSED
4:0-0 BOLD | REVERSED
4:3-3 DIM
4:5-16 BOLD
4:59-59 BOLD | REVERSED
5:0-59 BOLD | REVERSED
=== styles (high-contrast, ascii) ===
0:0-8 fg=#ffe066 bg=#000000
0:9-26 fg=#ffe066 bg=#000000 BOLD
0:27-59 fg=#ffe066 bg=#000000
1:0-0 fg=#ffe066 bg=#000000
1:1-1 fg=#ffffff bg=#000000
1:2-2 fg=#ffe066 bg=#000000
1:3-5 fg=#ffe066 bg=#000000 BOLD
1:6-6 fg=#ffe066 bg=#000000
1:7-7 fg=#ffffff bg=#000000
1:8-15 fg=#e69f00 bg=#000000 BOLD
1:16-16 fg=#ffffff bg=#000000
1:17-19 fg=#c6c6c6 bg=#000000
1:20-20 fg=#ffffff bg=#000000
1:21-28 fg=#56b4e9 bg=#000000 BOLD
1:29-58 fg=#ffffff bg=#000000
1:59-59 fg=#ffe066 bg=#000000
2:0-0 fg=#ffe066 bg=#000000
2:1-1 fg=#ffffff bg=#000000
2:2-9 fg=#c6c6c6 bg=#000000
2:10-58 fg=#ffffff bg=#000000
2:59-59 fg=#ffe066 bg=#000000
3:0-0 fg=#ffe066 bg=#000000
3:1-2 fg=#ffffff bg=#000000
3:3-3 fg=#c6c6c6 bg=#000000
3:4-4 fg=#ffffff bg=#000000
3:5-17 fg=#ffb77c bg=#000000
3:18-58 fg=#ffffff bg=#000000
3:59-59 fg=#ffe066 bg=#000000
4:0-0 fg=#ffe066 bg=#000000
4:1-2 fg=#ffffff bg=#000000
4:3-3 fg=#c6c6c6 bg=#000000
4:4-4 fg=#ffffff bg=#000000
4:5-16 fg=#ffb77c bg=#000000
4:17-58 fg=#ffffff bg=#000000
4:59-59 fg=#ffe066 bg=#000000
5:0-59 fg=#ffe066 bg=#000000
